<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/mail_fragment"
            android:icon="@drawable/ic_mail"
            android:name="@string/mail"
            android:checked="true"/>

        <item
            android:id="@+id/chart_fragment"
            android:icon="@drawable/ic_local_grocery_store_white_24dp"
            android:name="@string/chart"/>
    </group>

    <item android:name="@string/sub_items">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:icon="@drawable/ic_search_white_24dp"
                    android:name="@string/sub_item_1"/>

                <item
                    android:icon="@drawable/ic_more_vert_white_24dp"
                    android:name="@string/settings"/>
            </group>
        </menu>
    </item>

</menu>